--- a/index.html
+++ b/index.html
@@ -1,81 +1,50 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roy Tours</title>
-    <style>
-        body { margin: 0; font-family: Arial, sans-serif; }
-        header { background-color: #fff; padding: 10px 20px; display: flex; align-items: center; }
-        header img.logo { height: 60px; }
-        .banner { width: 100%; height: 90vh; background-image: url('1 home page.jpg'); background-size: cover; background-position: center; }
-        .slideshow-container { position: relative; max-width: 100%; margin: auto; }
-        .slides { display: none; width: 100%; height: 80vh; object-fit: cover; }
-        .prev, .next {
-            cursor: pointer; position: absolute; top: 50%; width: auto; padding: 16px; color: white; font-weight: bold;
-            font-size: 18px; transition: 0.6s ease; border-radius: 0 3px 3px 0; user-select: none;
-        }
-        .next { right: 0; border-radius: 3px 0 0 3px; }
-        .prev:hover, .next:hover { background-color: rgba(0,0,0,0.8); }
-        footer {
-            background-color: #6b4f37;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Roy Tours and Travels</title>
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: Arial, sans-serif; }
+    header { background-color: #fff; padding: 10px 20px; display: flex; align-items: center; border-bottom: 1px solid #ddd; }
+    .logo { height: 60px; }
+    .slideshow-container { position: relative; width: 100%; height: 90vh; overflow: hidden; }
+    .slides { display: none; width: 100%; height: 100%; object-fit: cover; }
+    .active-slide { display: block; }
+    .prev, .next { cursor: pointer; position: absolute; top: 50%; transform: translateY(-50%); padding: 16px; color: white; font-weight: bold; font-size: 24px; background-color: rgba(0,0,0,0.4); border-radius: 3px; z-index: 2; }
+    .prev { left: 0; } .next { right: 0; }
+    .prev:hover, .next:hover { background-color: rgba(0,0,0,0.7); }
+    footer { background-color: #6b4f37; color: white; text-align: center; padding: 10px; }
+  </style>
 </head>
 <body>
-
-<header>
-    <img src="logo roy tours.png" alt="Roy Tours Logo" class="logo">
-</header>
-
-<div class="banner"></div>
-
+<header><img src="logo.png" alt="Roy Tours Logo" class="logo" /></header>
 <div class="slideshow-container">
-  <img class="slides" src="2  (1).jpg" alt="Slide">
-  <img class="slides" src="2  (2).jpg" alt="Slide">
-  <img class="slides" src="2  (3).jpg" alt="Slide">
-  <img class="slides" src="2  (4).jpg" alt="Slide">
-  <img class="slides" src="2  (5).jpg" alt="Slide">
-  <img class="slides" src="2  (6).jpg" alt="Slide">
-  <img class="slides" src="2  (7).jpg" alt="Slide">
-  <img class="slides" src="2  (8).jpg" alt="Slide">
-  <img class="slides" src="2  (9).jpg" alt="Slide">
-  <img class="slides" src="2  (10).jpg" alt="Slide">
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <img class="slides active-slide" src="slide1.jpg" alt="Slide 1" />
+  <img class="slides" src="slide2.jpg" alt="Slide 2" />
+  <img class="slides" src="slide3.jpg" alt="Slide 3" />
+  <img class="slides" src="slide4.jpg" alt="Slide 4" />
+  <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+  <a class="next" onclick="changeSlide(1)">&#10095;</a>
 </div>
-
-<footer>
-    <p>Contact: +91-7050462102 | Email: rowdybro4444@gmail.com</p>
-</footer>
-
+<footer><p>Contact: +91-7050462102 | Email: rowdybro4444@gmail.com</p></footer>
 <script>
-let slideIndex = 0;
-showSlides();
-
-function plusSlides(n) {
-    slideIndex += n;
-    showSlides();
-}
-
-function showSlides() {
-    let slides = document.getElementsByClassName("slides");
-    if (slideIndex >= slides.length) {{ slideIndex = 0; }}
-    if (slideIndex < 0) {{ slideIndex = slides.length - 1; }}
-    for (let i = 0; i < slides.length; i++) {{
-        slides[i].style.display = "none";
-    }}
-    slides[slideIndex].style.display = "block";
-}
+  let currentSlide = 0;
+  const slides = document.querySelectorAll('.slides');
+  function showSlide(index) {
+    slides.forEach((slide, i) => {
+      slide.classList.remove('active-slide');
+      if (i === index) slide.classList.add('active-slide');
+    });
+  }
+  function changeSlide(n) {
+    currentSlide += n;
+    if (currentSlide >= slides.length) currentSlide = 0;
+    if (currentSlide < 0) currentSlide = slides.length - 1;
+    showSlide(currentSlide);
+  }
+  setInterval(() => { changeSlide(1); }, 5000);
 </script>
-
 </body>
 </html>
